- Inline-Querys werden jetzt unterstützt! -> Das erste Plugin mit Inline-Query-Support ist "Echo", das wie @bold funktioniert -> Neue Variable zur Config hinzugefügt, mit der man bestimmen kann, ob nur whitelisted User oder alle Inline-Querys benutzen können - AFK zeigt AFK-Text jetzt fett an

--- a/config.lua.example
+++ b/config.lua.example
@@ -21,6 +21,10 @@ Sende /hilfe, um zu starten
 	-- The symbol that starts a command. Usually noted as '/' in documentation.
 	cmd_pat = '/',
 
+	-- false = only whitelisted users can use inline querys
+	-- NOTE that it doesn't matter, if the chat is whitelisted! The USER must be whitelisted!
+	enable_inline_for_everyone = true,
+
 	errors = { -- Generic error messages used in various plugins.
 	    generic = 'An unexpected error occurred.',
 		connection = 'Verbindungsfehler.',
