--- a/config.lua.example
+++ b/config.lua.example
@@ -24,6 +24,10 @@ Sende /hilfe, um zu starten
 	-- false = only whitelisted users can use inline querys
 	-- NOTE that it doesn't matter, if the chat is whitelisted! The USER must be whitelisted!
 	enable_inline_for_everyone = true,
+	
+	-- Botan.io statistics
+	enable_statistics = false,
+	botan_token = '',
 
 	errors = { -- Generic error messages used in various plugins.
 	    generic = 'An unexpected error occurred.',
