--- a/config.lua.example
+++ b/config.lua.example
@@ -24,6 +24,16 @@ Sende /hilfe, um zu starten
 	-- false = only whitelisted users can use inline querys
 	-- NOTE that it doesn't matter, if the chat is whitelisted! The USER must be whitelisted!
 	enable_inline_for_everyone = true,
+	
+	-- Redis settings. Only edit if you know what you're doing.
+	redis = {
+		host = '127.0.0.1',
+		port = 6379,
+		use_socket = false, -- Set to true, if you need to connect over a socket
+		socket_path = 'unix:///home/path/to/your/redis/sock',
+		password = nil, -- Set, if you need a password to connect to redis
+		database = nil -- Set, if you want to select another database. Default is 0 (use no ""!)
+	},
 
 	errors = { -- Generic error messages used in various plugins.
 	    generic = 'An unexpected error occurred.',
